# py-dcHiC

./: .gitignore  AUDIT.md  DISCOVERY.md  ITERATION_LOG.md  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
data/: fixture_dchic.json  manifest.yaml
examples/: build_notebooks.py  compare_R_vs_Python.ipynb  evolution.ipynb  function_by_function_R_parity.ipynb  tutorial_dchic.ipynb
pydchic/: __init__.py  analyze.py  compartment.py  core.py  differential.py  io.py
tests/: _run_candidate.py  build_fixture.py  parity_metrics.py  r_reference_driver.R  test_exact_match.py  test_smoke.py
tests/demo_data/: CN_1_chr19.pc.txt  CN_2_chr19.pc.txt  CN_3_chr19.pc.txt  CN_4_chr19.pc.txt  CN_5_chr19.pc.txt  ES_1_chr19.pc.txt  ES_2_chr19.pc.txt  ES_3_chr19.pc.txt  ES_4_chr19.pc.txt  NPC_2_chr19.pc.txt  NPC_3_chr19.pc.txt  NPC_4_chr19.pc.txt
