[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydchic"
version = "0.1.0"
description = "Pure-Python port of dcHiC — differential compartment analysis of Hi-C datasets (compartment calling + differential)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "omicverse-rebuildr port", email = "zhoulabarc@gmail.com" },
]
keywords = [
    "Hi-C", "compartments", "A/B-compartment", "differential", "genomics", "3D-genome",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "pyyaml"]

[project.urls]
Homepage = "https://github.com/omicverse/py-dcHiC"
Repository = "https://github.com/omicverse/py-dcHiC"
Issues = "https://github.com/omicverse/py-dcHiC/issues"
"Upstream R package" = "https://github.com/ay-lab/dcHiC"
"Upstream (omicverse)" = "https://github.com/Starlitnightly/omicverse"

[tool.setuptools.packages.find]
include = ["pydchic*"]
exclude = ["tests*", "examples*", "dcHiC-ref*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::RuntimeWarning",
]
